# docs/swagger.json
@@ -478,6 +478,14 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"Record_string.boolean_": {
+				"properties": {},
+				"additionalProperties": {
+					"type": "boolean"
+				},
+				"type": "object",
+				"description": "Construct a type with a set of properties K of type T"
+			},
 			"Partial_User_": {
 				"properties": {
 					"id": {
@@ -595,6 +603,9 @@
 							"$ref": "#/components/schemas/Document"
 						},
 						"type": "array"
+					},
+					"notifications": {
+						"$ref": "#/components/schemas/Record_string.boolean_"
 					}
 				},
 				"type": "object",
@@ -683,6 +694,9 @@
 							"$ref": "#/components/schemas/Document"
 						},
 						"type": "array"
+					},
+					"notifications": {
+						"$ref": "#/components/schemas/Record_string.boolean_"
 					}
 				},
 				"required": [
@@ -773,6 +787,9 @@
 							"$ref": "#/components/schemas/Document"
 						},
 						"type": "array"
+					},
+					"notifications": {
+						"$ref": "#/components/schemas/Record_string.boolean_"
 					}
 				},
 				"required": [
@@ -858,7 +875,8 @@
 					"final",
 					"sent",
 					"ordered",
-					"invalid"
+					"invalid",
+					"under survey"
 				],
 				"type": "string"
 			},
@@ -1402,6 +1420,141 @@
 				"type": "object",
 				"description": "Make all properties in T optional"
 			},
+			"Pick_Tender.Exclude_keyofTender.id-or-createdOn-or-updatedBy-or-updatedOn__": {
+				"properties": {
+					"number": {
+						"type": "string"
+					},
+					"status": {
+						"$ref": "#/components/schemas/TENDER_STATUS"
+					},
+					"createdBy": {
+						"type": "number",
+						"format": "double"
+					},
+					"tenant": {
+						"$ref": "#/components/schemas/Tenant"
+					},
+					"tenantId": {
+						"type": "number",
+						"format": "double"
+					},
+					"documents": {
+						"items": {
+							"$ref": "#/components/schemas/Document"
+						},
+						"type": "array"
+					},
+					"survey": {
+						"type": "string"
+					},
+					"contact": {
+						"$ref": "#/components/schemas/Contact"
+					},
+					"type": {
+						"type": "string"
+					},
+					"fee": {
+						"type": "number",
+						"format": "double"
+					},
+					"returned": {
+						"type": "boolean"
+					},
+					"vatKey": {
+						"type": "string"
+					},
+					"currency": {
+						"$ref": "#/components/schemas/TENDER_CURRENCY"
+					},
+					"surcharge": {
+						"type": "number",
+						"format": "double"
+					},
+					"discount": {
+						"type": "number",
+						"format": "double"
+					},
+					"validTo": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"dueDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"openDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"startDate": {
+						"type": "string",
+						"format": "date-time"
+					},
+					"notes": {
+						"type": "string"
+					},
+					"inquiry": {
+						"type": "string"
+					},
+					"locationDescription": {
+						"type": "string"
+					},
+					"toolRequirements": {
+						"type": "string"
+					},
+					"otherComment": {
+						"type": "string"
+					},
+					"customerId": {
+						"type": "number",
+						"format": "double"
+					},
+					"customer": {
+						"$ref": "#/components/schemas/Company"
+					},
+					"contractorId": {
+						"type": "number",
+						"format": "double"
+					},
+					"contractor": {
+						"$ref": "#/components/schemas/Company"
+					},
+					"locationId": {
+						"type": "number",
+						"format": "double"
+					},
+					"location": {
+						"$ref": "#/components/schemas/Location"
+					},
+					"contactId": {
+						"type": "number",
+						"format": "double"
+					},
+					"items": {
+						"items": {
+							"$ref": "#/components/schemas/TenderItem"
+						},
+						"type": "array"
+					}
+				},
+				"required": [
+					"status",
+					"type",
+					"returned",
+					"vatKey",
+					"currency"
+				],
+				"type": "object",
+				"description": "From T, pick a set of properties whose keys are in the union K"
+			},
+			"Omit_Tender.id-or-createdOn-or-updatedBy-or-updatedOn_": {
+				"$ref": "#/components/schemas/Pick_Tender.Exclude_keyofTender.id-or-createdOn-or-updatedBy-or-updatedOn__",
+				"description": "Construct a type with the properties of T except for those in type K."
+			},
+			"CreateTenderProperties": {
+				"$ref": "#/components/schemas/Omit_Tender.id-or-createdOn-or-updatedBy-or-updatedOn_"
+			},
 			"Partial_TenderItem_": {
 				"properties": {
 					"id": {
@@ -1715,141 +1868,6 @@
 				},
 				"type": "object",
 				"description": "Make all properties in T optional"
-			},
-			"Pick_Tender.Exclude_keyofTender.id-or-createdOn-or-updatedBy-or-updatedOn__": {
-				"properties": {
-					"number": {
-						"type": "string"
-					},
-					"status": {
-						"$ref": "#/components/schemas/TENDER_STATUS"
-					},
-					"createdBy": {
-						"type": "number",
-						"format": "double"
-					},
-					"tenant": {
-						"$ref": "#/components/schemas/Tenant"
-					},
-					"tenantId": {
-						"type": "number",
-						"format": "double"
-					},
-					"documents": {
-						"items": {
-							"$ref": "#/components/schemas/Document"
-						},
-						"type": "array"
-					},
-					"survey": {
-						"type": "string"
-					},
-					"contact": {
-						"$ref": "#/components/schemas/Contact"
-					},
-					"type": {
-						"type": "string"
-					},
-					"fee": {
-						"type": "number",
-						"format": "double"
-					},
-					"returned": {
-						"type": "boolean"
-					},
-					"vatKey": {
-						"type": "string"
-					},
-					"currency": {
-						"$ref": "#/components/schemas/TENDER_CURRENCY"
-					},
-					"surcharge": {
-						"type": "number",
-						"format": "double"
-					},
-					"discount": {
-						"type": "number",
-						"format": "double"
-					},
-					"validTo": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"dueDate": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"openDate": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"startDate": {
-						"type": "string",
-						"format": "date-time"
-					},
-					"notes": {
-						"type": "string"
-					},
-					"inquiry": {
-						"type": "string"
-					},
-					"locationDescription": {
-						"type": "string"
-					},
-					"toolRequirements": {
-						"type": "string"
-					},
-					"otherComment": {
-						"type": "string"
-					},
-					"customerId": {
-						"type": "number",
-						"format": "double"
-					},
-					"customer": {
-						"$ref": "#/components/schemas/Company"
-					},
-					"contractorId": {
-						"type": "number",
-						"format": "double"
-					},
-					"contractor": {
-						"$ref": "#/components/schemas/Company"
-					},
-					"locationId": {
-						"type": "number",
-						"format": "double"
-					},
-					"location": {
-						"$ref": "#/components/schemas/Location"
-					},
-					"contactId": {
-						"type": "number",
-						"format": "double"
-					},
-					"items": {
-						"items": {
-							"$ref": "#/components/schemas/TenderItem"
-						},
-						"type": "array"
-					}
-				},
-				"required": [
-					"status",
-					"type",
-					"returned",
-					"vatKey",
-					"currency"
-				],
-				"type": "object",
-				"description": "From T, pick a set of properties whose keys are in the union K"
-			},
-			"Omit_Tender.id-or-createdOn-or-updatedBy-or-updatedOn_": {
-				"$ref": "#/components/schemas/Pick_Tender.Exclude_keyofTender.id-or-createdOn-or-updatedBy-or-updatedOn__",
-				"description": "Construct a type with the properties of T except for those in type K."
-			},
-			"CreateTenderProperties": {
-				"$ref": "#/components/schemas/Omit_Tender.id-or-createdOn-or-updatedBy-or-updatedOn_"
 			},
 			"TENANT_STATUS": {
 				"enum": [
@@ -3246,37 +3264,63 @@
 				]
 			}
 		},
-		"/tenders": {
-			"get": {
-				"operationId": "GetTenders",
+		"/users/{id}/notifications": {
+			"put": {
+				"operationId": "UpdateNotifications",
 				"responses": {
 					"200": {
 						"description": "OK",
 						"content": {
 							"application/json": {
 								"schema": {
-									"items": {
-										"$ref": "#/components/schemas/Partial_Tender_"
+									"properties": {
+										"success": {
+											"type": "boolean"
+										}
 									},
-									"type": "array"
+									"required": [
+										"success"
+									],
+									"type": "object"
 								}
 							}
 						}
 					}
 				},
-				"description": "Retrieves a list of all tenders within the system. This endpoint requires\nauthentication and is protected by JWT tokens with the \"Tender:List\" permission.",
 				"tags": [
-					"Tender"
+					"User"
 				],
 				"security": [
 					{
 						"jwtToken": [
-							"Tender:List"
+							"Me:*"
 						]
 					}
 				],
-				"parameters": []
-			},
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/Record_string.boolean_"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/tenders": {
 			"post": {
 				"operationId": "CreateTender",
 				"responses": {
@@ -3320,6 +3364,36 @@
 						}
 					}
 				}
+			},
+			"get": {
+				"operationId": "GetTenders",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"items": {
+										"$ref": "#/components/schemas/Partial_Tender_"
+									},
+									"type": "array"
+								}
+							}
+						}
+					}
+				},
+				"description": "Retrieves a list of all tenders within the system. This endpoint requires\nauthentication and is protected by JWT tokens with the \"Tender:List\" permission.",
+				"tags": [
+					"Tender"
+				],
+				"security": [
+					{
+						"jwtToken": [
+							"Tender:List"
+						]
+					}
+				],
+				"parameters": []
 			},
 			"delete": {
 				"operationId": "DeleteTenders",
@@ -3376,6 +3450,113 @@
 								],
 								"type": "object",
 								"description": "An object containing an array of tender IDs to delete."
+							}
+						}
+					}
+				}
+			}
+		},
+		"/tenders/{id}/copy": {
+			"post": {
+				"operationId": "CopyTender",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"allOf": [
+										{
+											"$ref": "#/components/schemas/Partial_Tender_"
+										}
+									],
+									"nullable": true
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Tender"
+				],
+				"security": [
+					{
+						"jwtToken": [
+							"Tender:Create"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/tenders/{id}/send": {
+			"post": {
+				"operationId": "SendEmail",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"success": {
+											"type": "boolean"
+										}
+									},
+									"required": [
+										"success"
+									],
+									"type": "object"
+								}
+							}
+						}
+					}
+				},
+				"tags": [
+					"Tender"
+				],
+				"security": [
+					{
+						"jwtToken": [
+							"Tender:Create"
+						]
+					}
+				],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "id",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"properties": {
+									"message": {
+										"type": "string"
+									}
+								},
+								"required": [
+									"message"
+								],
+								"type": "object"
 							}
 						}
 					}
@@ -3733,7 +3914,7 @@
 				]
 			}
 		},
-		"/tenders/{id}/items-copy/{sourceTenderId}": {
+		"/tenders/{id}/items-copy/{targetTenderId}": {
 			"put": {
 				"operationId": "CopyTenderItem",
 				"responses": {
@@ -3779,7 +3960,7 @@
 					},
 					{
 						"in": "path",
-						"name": "sourceTenderId",
+						"name": "targetTenderId",
 						"required": true,
 						"schema": {
 							"format": "double",
